cluster/apps/default/raspberry-pi-client/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-client
  namespace: default
spec:
  selector:
    matchLabels:
      app: raspberry-pi-client
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-client
    spec:
      containers:
      - name: raspberry-pi-client
        image: ghcr.io/rustygreen/raspberry-pi-client:main
        imagePullPolicy: "Always"
        ports:
          - containerPort: 80
