cluster/apps/default/raspberry-pi-client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-client
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  raspberry-pi-client
