cluster/apps/default/raspberry-pi-client/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry-pi-client
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: "raspberry-pi"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  rules:
    - host: pi.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: raspberry-pi-client
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pi.${SECRET_DOMAIN}
